# fansphere

./: .cursorignore  .cursorrules  .gitignore  README.md  ROADMAP.md
backend/: Cargo.toml
backend/src/: lib.rs  state.rs
backend/src/instruction/: create.rs  create_comment.rs  create_post.rs  create_profile.rs  helper.rs  like_comment.rs  like_post.rs  mod.rs  subscribe.rs
docs/: PDA_LAYOUT.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(public)/explore/: loading.tsx  page.tsx
frontend/src/components/: app-header.tsx
frontend/src/components/auth/: SiwsButton.tsx
frontend/src/components/creator/: SubscribeButton.tsx
frontend/src/components/paywall/: PaywallOverlay.tsx
frontend/src/components/post/: LockedPostCard.tsx  PostCard.tsx  PostFeed.tsx
frontend/src/components/solana/: solana-provider.tsx
frontend/src/components/upload/: ArweaveUploader.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: useArweaveUpload.ts  useCreatorProfile.ts  useFeed.ts  useSignIn.ts  useSubscription.ts  useUnlockPost.ts
frontend/src/lib/: fanSphereUtil.ts  pda.ts  program.ts  serialization.ts
frontend/src/services/: api.service.ts  arweave.service.ts  auth.service.ts  instruction.service.ts  transaction.service.ts
frontend/src/store/: auth.store.ts  upload.store.ts
frontend/src/types/: post.types.ts  profile.types.ts
