[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
solana-address = { version = "2.0.0", features = ["curve25519"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
blake3 = "1.8.2"
